tests/fail/import_unsafe_builtin--ImportError.py
"""You should not be able to import non-whitelisted modules, especially sys."""
import sys
